# GameOfLife

./: .gitignore  CMakeLists.txt  CPUCanvas.cpp  CPUCanvas.h  CUDACanvas.cpp  CUDACanvas.cu  CUDACanvas.h  Canvas.cpp  Canvas.h  Grid.cpp  Grid.h  Makefile  OpenCLCanvas.cpp  OpenCLCanvas.h  Utils.cpp  Window.cpp  kernel.cl  kernel.cu  main  main.cpp  replicator  results.txt  results_h32_w64.txt  results_no_restrains_h100_w100.txt  results_no_restrains_h1024_w1024.txt  results_no_restrains_h1280_w720.txt  results_no_restrains_h128_w128.txt  results_no_restrains_h16_w16.txt  results_no_restrains_h20_w20.txt  results_no_restrains_h256_w256.txt  results_no_restrains_h32_w64.txt  results_no_restrains_h512_w512.txt  results_no_restrains_h64_w64.txt
